# finchat

./: .dockerignore  .gcloudignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: billing-report.yml  ci-cd.yml  rollback.yml
app/: answer_normalization.py  auth_deps.py  auth_tokens.py  chat_repository.py  chat_storage_gcs.py  config.py  database.py  local_summarizer.py  logging_config.py  main.py  metrics.py  news_store.py  openrouter_client.py  orm_models.py  schemas.py  tracing.py  vertex_client.py
docs/: AI_SUMMARIZATION.md
finchat/.git_removed/: config
grafana/: Dockerfile  entrypoint.sh
grafana/dashboards/: golden-signals.json
grafana/provisioning/dashboards/: default.yml
grafana/provisioning/datasources/: prometheus.yml
scripts/: create-gemini-api-key-and-secret.sh  decommission.sh  diagnose-grafana.sh  setup-gcp.sh  test_local_summarization.py  test_openrouter_connection.py  verify_chat.py
static/: index.html
tests/: test_answer_normalization.py  test_api.py  test_local_summarizer.py  test_news_store.py  test_openrouter_client.py  test_vertex_fallback.py
